# lash

./: .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  dev.sh  gpt-5.4.stratified-50.json  install_lash.sh  justfile
kaml/: Cargo.toml  build.rs
kaml-cli/: Cargo.toml
kaml-cli/src/: app.rs  event.rs  main.rs  ui.rs
kaml-demo/: Cargo.toml
kaml-demo/src/: main.rs  test_session.rs
kaml/baml_src/: agent.baml
kaml/python/: repl.py
kaml/src/: agent.rs  manager.rs  protocol.rs  session.rs
kaml/src/tools/: composite.rs  delegate_task.rs  edit_file.rs  fetch_url.rs  glob.rs  hashline.rs  ls.rs  mod.rs  shell.rs  web_search.rs  write_file.rs
lash-autoresearch/: Cargo.toml
lash-autoresearch/src/: lib.rs  model.rs  runtime.rs  ui.rs
lash-cli/: Cargo.toml  build.rs
lash-cli/src/: activity.rs  app.rs  assistant_text.rs  autonomous.rs  bootstrap.rs  chrome_ui.rs  cli_support.rs  clipboard.rs  command.rs  config.rs  diff.rs  editor.rs  event.rs  fork.rs  host_docs.rs  input_items.rs  interactive.rs  lib.rs  main.rs  markdown.rs  overlay.rs  paths.rs  persistence.rs  plugin_surface.rs  prompt_overrides.rs  prompt_tool.rs  provider_metadata.rs  repl_stream_mask.rs  replay.rs  repo_status.rs  resume.rs  resume_snapshot.rs  rlm_stream_mask.rs  runtime_perf.rs  scratch_tui.rs  session_bootstrap.rs  session_log.rs  setup.rs  skill.rs  skill_catalog.rs  (+16 more)
lash-cli/src/activity/: mod.rs  projector.rs  shared.rs
lash-cli/src/app/: input.rs  live.rs  mod.rs  projection.rs  queues.rs  runtime_events.rs  tests.rs  view.rs
lash-cli/src/delegate_tools/: mod.rs  policy.rs  runner.rs
lash-cli/src/interactive/: commands.rs  helpers.rs  input_handling.rs  mod.rs  runtime.rs  tests.rs
lash-cli/src/perf_support/: dhat.rs  git.rs  metrics.rs  report.rs  tempdir.rs  time.rs
lash-cli/src/render/: activity.rs  artifact.rs  mod.rs  prompt.rs  queue.rs  tests.rs  wait.rs
lash-cli/src/runtime_perf/: harness.rs  measurement.rs  mod.rs  openai_compat.rs  providers.rs  report.rs  runner.rs  scenarios.rs  store.rs
lash-cli/src/server/: handler.rs  http.rs  mod.rs  protocol.rs  transport.rs
lash-cli/src/ui_perf/: file_index_cases.rs  render_cases.rs  report.rs  surface_fixture.rs  workloads.rs
lash-cli/testdata/ui/: ask_panel.snap  tool_smoke.json  tool_smoke.snap
lash-core/: Cargo.toml  build.rs
lash-core/src/: attachments.rs  chronological.rs  direct.rs  lib.rs  plugin_stack.rs  runtime_controls.rs  session.rs  session_graph.rs  testing.rs  tool_dispatch.rs  tool_provider.rs  tool_registry.rs  trace.rs
lash-core/src/llm/: transport.rs
lash-core/src/plugin/: actions.rs  error.rs  history.rs  hooks.rs  mod.rs  monitor.rs  registrar.rs  registry.rs  runtime_host.rs  runtime_impl.rs  session_obj.rs  session_types.rs  surface.rs  tool_result_projection_builtin.rs
lash-core/src/provider/: handle.rs  mod.rs  options.rs  tests.rs
lash-core/src/runtime/: assembly.rs  builder.rs  environment.rs  host.rs  io.rs  lifecycle.rs  mod.rs  observation.rs  session_api.rs  state.rs  turn_commit_pipeline.rs  turn_driver.rs  turn_graph.rs  turn_loop.rs  turn_progress.rs
lash-core/src/session/: async_handles.rs  monitor_handles.rs  tool_execution.rs
lash-core/src/session_model/: mod.rs
lash-default-tools/: Cargo.toml
lash-default-tools/src/: lib.rs
lash-default-tools/src/tools/: apply_patch.rs  fetch_url.rs  glob.rs  grep.rs  ls.rs  mod.rs  read_file.rs  shell.rs  web_search.rs
lash-delegate-tools/: Cargo.toml
lash-delegate-tools/src/: lib.rs  policy.rs  runner.rs
lash-embed/: Cargo.toml
lash-embed/examples/: standard_parent_rlm_child.rs
lash-embed/src/: control.rs  core.rs  error.rs  lib.rs  plugin_binding.rs  session.rs  support.rs  tests.rs  turn.rs  usage.rs
lash-embed/tests/: embed_plugins.rs  ui.rs
lash-export/: Cargo.toml
lash-export/src/: html.rs  json.rs  lib.rs  markdown.rs  trace.rs  tree.rs
lash-export/src/html/: assets.rs  (+5 more)
lash-gepa/: Cargo.toml
lash-gepa/src/: lib.rs
lash-harness-opt/: Cargo.toml
lash-harness-opt/src/: lib.rs  main.rs
lash-llm-tools/: Cargo.toml
lash-llm-tools/src/: lib.rs
lash-llm-transport/: Cargo.toml
lash-llm-transport/src/: lib.rs  streaming.rs  timeouts.rs
lash-mode-rlm/: Cargo.toml
lash-mode-rlm/src/: control_tools.rs  driver.rs  executor.rs  lib.rs  plugin.rs  projected_bindings.rs  projection.rs  protocol.rs  rlm_support.rs  stream_mask.rs
lash-mode-rlm/tests/: protocol_drivers.rs
lash-mode-rlmpure/: Cargo.toml
lash-mode-rlmpure/src/: driver.rs  lib.rs  plugin.rs  rlm_support.rs  stream_mask.rs
lash-mode-standard/: Cargo.toml
lash-mode-standard/src/: batch.rs  lib.rs
lash-mode-standard/tests/: embedded_builder.rs  native_tools.rs
lash-openai-schema/: Cargo.toml
lash-openai-schema/src/: lib.rs
lash-plugin-mcp/: Cargo.toml
lash-plugin-mcp/src/: config.rs  error.rs  naming.rs  plugin.rs  pool.rs
lash-plugin-observational-memory/: Cargo.toml
lash-plugin-observational-memory/src/: constants.rs  context_transform.rs  graph_state.rs  lib.rs  prompts.rs  tests.rs
lash-plugin-plan-mode/: Cargo.toml
lash-plugin-plan-mode/src/: lib.rs  plan_mode.rs  update_plan.rs
lash-plugin-plan-mode/tests/: integration.rs
lash-plugin-prompt-context/: Cargo.toml
lash-plugin-prompt-context/src/: lib.rs
lash-plugin-prompt-context/tests/: integration.rs
lash-plugin-rolling-history/: Cargo.toml
lash-plugin-rolling-history/src/: lib.rs
lash-plugin-tool-discovery/: Cargo.toml
lash-plugin-tool-discovery/src/: catalog.rs  common.rs  definitions.rs  lib.rs  provider.rs  ranking.rs  rerank.rs  schema_index.rs
lash-plugin-ui-activity/: Cargo.toml
lash-plugin-ui-activity/src/: lib.rs
lash-plugin-ui-activity/tests/: integration.rs
lash-provider-anthropic/: Cargo.toml
lash-provider-anthropic/src/: lib.rs
lash-provider-auth/: Cargo.toml
lash-provider-codex/: Cargo.toml
lash-provider-codex/src/: lib.rs  oauth.rs
lash-provider-google/: Cargo.toml
lash-provider-google/src/: lib.rs  oauth.rs
(+2631 files in other folders)
