[workspace]
members = [
    "crates/lash-sansio",
    "crates/lash-openai-schema",
    "crates/lash-trace",
    "crates/lash-trace-viewer",
    "crates/lash-rlm-types",
    "crates/lash-core",
    "crates/lash-remote-protocol",
    "crates/lash-llm-transport",
    "crates/lash-provider-auth",
    "crates/lash-sqlite-store",
    "crates/lash-postgres-store",
    "crates/lash-s3-store",
    "crates/lash-restate",
    "crates/lash",
    "crates/lash-protocol-rlm",
    "crates/lash-protocol-standard",
    "crates/lash-plugin-mcp",
    "crates/lash-plugin-observational-memory",
    "crates/lash-plugin-plan-mode",
    "crates/lash-plugin-process-controls",
    "crates/lash-plugin-rolling-history",
    "crates/lash-plugin-tool-output-budget",
    "crates/lash-plugin-tool-discovery",
    "crates/lash-llm-tools",
    "crates/lash-tool-support",
    "crates/lash-tool-apply-patch",
    "crates/lash-tool-files",
    "crates/lash-tool-search",
    "crates/lash-tool-shell",
    "crates/lash-tool-web",
    "crates/lash-local-store",
    "crates/lash-standard-plugins",
    "crates/lash-provider-anthropic",
    "crates/lash-provider-codex",
    "crates/lash-provider-google",
    "crates/lash-provider-openai",
    "crates/lash-subagents",
    "crates/lash-tui-extensions",
    "crates/lash-tui",
    "crates/lash-autoresearch",
    "crates/lash-harness-opt",
    "crates/lash-cli",
    "crates/lash-export",
    "crates/lash-file-index",
    "crates/lashlang",
    "examples/agent-service",
    "examples/agent-workbench",
    "e2e/restate-postgres-workers",
]
# `cargo build` from the repo root compiles only the publishable SDK surface.
# Internal bins/benches/examples build with `cargo build --workspace` or `-p <name>`.
default-members = [
    "crates/lash-core",
    "crates/lash-remote-protocol",
    "crates/lash",
    "crates/lash-trace",
    "crates/lash-rlm-types",
    "crates/lash-llm-transport",
    "crates/lash-llm-tools",
    "crates/lash-openai-schema",
    "crates/lash-protocol-standard",
    "crates/lash-protocol-rlm",
    "crates/lash-provider-auth",
    "crates/lash-provider-openai",
    "crates/lash-provider-anthropic",
    "crates/lash-provider-codex",
    "crates/lash-provider-google",
    "crates/lash-sqlite-store",
    "crates/lash-postgres-store",
    "crates/lash-s3-store",
    "crates/lash-tool-support",
    "crates/lash-tool-apply-patch",
    "crates/lash-tool-files",
    "crates/lash-tool-search",
    "crates/lash-tool-shell",
    "crates/lash-tool-web",
    "crates/lash-local-store",
    "crates/lash-standard-plugins",
    "crates/lash-plugin-mcp",
    "crates/lash-plugin-observational-memory",
    "crates/lash-plugin-plan-mode",
    "crates/lash-plugin-process-controls",
    "crates/lash-plugin-rolling-history",
    "crates/lash-plugin-tool-output-budget",
    "crates/lash-plugin-tool-discovery",
    "crates/lash-subagents",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.39"
license = "MIT"
edition = "2024"
authors = ["Samuel Galanakis"]
repository = "https://github.com/SamGalanakis/lash"
homepage = "https://samgalanakis.github.io/lash/"
documentation = "https://samgalanakis.github.io/lash/"
readme = "README.md"
rust-version = "1.90"

# Centralized external versions. Members opt in with
# `dep = { workspace = true, features = [...] }`.
[workspace.dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = "4"
croner = "3"
futures-util = "0.3"
jsonschema = "0.18"
object_store = { version = "0.13.2", default-features = false }
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.13", default-features = false }
rmp-serde = "1"
rmcp = { version = "1.6", default-features = false }
restate-sdk = { version = "0.10", default-features = false, features = ["http_server"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
uuid = "1"


# Internal crates — single source of truth for the lockstep workspace version.
# A release bump only edits these lines (not every crate manifest).
lash = { package = "lash-runtime", path = "crates/lash", version = "=0.1.0-alpha.39" }
lash-autoresearch = { path = "crates/lash-autoresearch", version = "=0.1.0-alpha.39" }
lash-cli = { path = "crates/lash-cli", version = "=0.1.0-alpha.39" }
lash-core = { path = "crates/lash-core", version = "=0.1.0-alpha.39" }
lash-export = { path = "crates/lash-export", version = "=0.1.0-alpha.39" }
lash-file-index = { path = "crates/lash-file-index", version = "=0.1.0-alpha.39" }
lash-llm-tools = { path = "crates/lash-llm-tools", version = "=0.1.0-alpha.39" }
lash-llm-transport = { path = "crates/lash-llm-transport", version = "=0.1.0-alpha.39" }
lash-local-store = { path = "crates/lash-local-store", version = "=0.1.0-alpha.39" }
lash-postgres-store = { path = "crates/lash-postgres-store", version = "=0.1.0-alpha.39" }
lash-s3-store = { path = "crates/lash-s3-store", version = "=0.1.0-alpha.39" }
lash-openai-schema = { path = "crates/lash-openai-schema", version = "=0.1.0-alpha.39" }
lash-plugin-mcp = { path = "crates/lash-plugin-mcp", version = "=0.1.0-alpha.39" }
lash-plugin-observational-memory = { path = "crates/lash-plugin-observational-memory", version = "=0.1.0-alpha.39" }
lash-plugin-plan-mode = { path = "crates/lash-plugin-plan-mode", version = "=0.1.0-alpha.39" }
lash-plugin-process-controls = { path = "crates/lash-plugin-process-controls", version = "=0.1.0-alpha.39" }
lash-plugin-rolling-history = { path = "crates/lash-plugin-rolling-history", version = "=0.1.0-alpha.39" }
lash-plugin-tool-discovery = { path = "crates/lash-plugin-tool-discovery", version = "=0.1.0-alpha.39" }
lash-plugin-tool-output-budget = { path = "crates/lash-plugin-tool-output-budget", version = "=0.1.0-alpha.39" }
lash-protocol-rlm = { path = "crates/lash-protocol-rlm", version = "=0.1.0-alpha.39" }
lash-protocol-standard = { path = "crates/lash-protocol-standard", version = "=0.1.0-alpha.39" }
lash-provider-anthropic = { path = "crates/lash-provider-anthropic", version = "=0.1.0-alpha.39" }
lash-provider-auth = { path = "crates/lash-provider-auth", version = "=0.1.0-alpha.39" }
lash-provider-codex = { path = "crates/lash-provider-codex", version = "=0.1.0-alpha.39" }
lash-provider-google = { path = "crates/lash-provider-google", version = "=0.1.0-alpha.39" }
lash-provider-openai = { path = "crates/lash-provider-openai", version = "=0.1.0-alpha.39" }
lash-remote-protocol = { path = "crates/lash-remote-protocol", version = "=0.1.0-alpha.39" }
lash-restate = { path = "crates/lash-restate", version = "=0.1.0-alpha.39" }
lash-rlm-types = { path = "crates/lash-rlm-types", version = "=0.1.0-alpha.39" }
lash-sansio = { path = "crates/lash-sansio", version = "=0.1.0-alpha.39" }
lash-standard-plugins = { path = "crates/lash-standard-plugins", version = "=0.1.0-alpha.39" }
lash-subagents = { path = "crates/lash-subagents", version = "=0.1.0-alpha.39" }
lash-tool-apply-patch = { path = "crates/lash-tool-apply-patch", version = "=0.1.0-alpha.39" }
lash-tool-files = { path = "crates/lash-tool-files", version = "=0.1.0-alpha.39" }
lash-tool-search = { path = "crates/lash-tool-search", version = "=0.1.0-alpha.39" }
lash-tool-shell = { path = "crates/lash-tool-shell", version = "=0.1.0-alpha.39" }
lash-tool-support = { path = "crates/lash-tool-support", version = "=0.1.0-alpha.39" }
lash-tool-web = { path = "crates/lash-tool-web", version = "=0.1.0-alpha.39" }
lash-trace = { path = "crates/lash-trace", version = "=0.1.0-alpha.39" }
lash-tui = { path = "crates/lash-tui", version = "=0.1.0-alpha.39" }
lash-tui-extensions = { path = "crates/lash-tui-extensions", version = "=0.1.0-alpha.39" }
lash-sqlite-store = { path = "crates/lash-sqlite-store", version = "=0.1.0-alpha.39" }
lashlang = { path = "crates/lashlang", version = "=0.1.0-alpha.39" }
[profile.release]
lto = "thin"
strip = true
