[workspace]
members = [
    "crates/lash-sansio",
    "crates/lash-trace",
    "crates/lash-trace-viewer",
    "crates/lash-rlm-types",
    "crates/lash-core",
    "crates/lash-lashlang-runtime",
    "crates/lash-remote-protocol",
    "crates/lash-http-transport",
    "crates/lash-llm-transport",
    "crates/lash-provider-auth",
    "crates/lash-sqlite-store",
    "crates/lash-postgres-store",
    "crates/lash-s3-store",
    "crates/lash-restate",
    "crates/lash",
    "crates/lash-protocol-rlm",
    "crates/lash-protocol-standard",
    "crates/lash-plugin-mcp",
    "crates/lash-plugin-observational-memory",
    "crates/lash-plugin-plan-mode",
    "crates/lash-plugin-process-controls",
    "crates/lash-plugin-tool-output-budget",
    "crates/lash-llm-tools",
    "crates/lash-tool-support",
    "crates/lash-tools",
    "crates/lash-standard-plugins",
    "crates/lash-provider-anthropic",
    "crates/lash-provider-google",
    "crates/lash-provider-openai",
    "crates/lash-sim",
    "crates/lash-subagents",
    "crates/lash-perf",
    "crates/lashlang",
    "examples/agent-service",
    "examples/agent-workbench",
    "examples/docs-snippets",
    "e2e/restate-postgres-workers",
]
# `cargo build` from the repo root compiles only the publishable SDK surface.
# Internal bins/benches/examples build with `cargo build --workspace` or `-p <name>`.
default-members = [
    "crates/lash-core",
    "crates/lash-remote-protocol",
    "crates/lash",
    "crates/lash-trace",
    "crates/lash-rlm-types",
    "crates/lash-http-transport",
    "crates/lash-llm-transport",
    "crates/lash-llm-tools",
    "crates/lash-protocol-standard",
    "crates/lash-protocol-rlm",
    "crates/lash-provider-auth",
    "crates/lash-provider-openai",
    "crates/lash-provider-anthropic",
    "crates/lash-provider-google",
    "crates/lash-sqlite-store",
    "crates/lash-postgres-store",
    "crates/lash-s3-store",
    "crates/lash-tool-support",
    "crates/lash-tools",
    "crates/lash-standard-plugins",
    "crates/lash-plugin-mcp",
    "crates/lash-plugin-observational-memory",
    "crates/lash-plugin-plan-mode",
    "crates/lash-plugin-process-controls",
    "crates/lash-plugin-tool-output-budget",
    "crates/lash-subagents",
]
resolver = "3"

[workspace.package]
# Honest working-tree placeholder. There is NO version-bump commit: main never
# carries a released version. The release workflow computes the next version
# from [workspace.metadata.release].channel + the v* tags and stamps it into an
# ephemeral tag checkout at packaging time (scripts/release_version.py stamp).
version = "0.0.0-dev"
license = "MIT"
edition = "2024"
authors = ["Samuel Galanakis"]
repository = "https://github.com/Ascending-AI/lash"
homepage = "https://samgalanakis.github.io/lash/"
documentation = "https://samgalanakis.github.io/lash/"
readme = "README.md"
rust-version = "1.90"

# The release series CI advances. `scripts/release_version.py print-next` reads
# this channel and returns the next `<channel>.N` (or, for a clean X.Y.Z
# channel, the next patch) from the existing tags — the manifest version above
# is always the dev placeholder, so the channel is the single source of truth
# for what series releases belong to.
[workspace.metadata.release]
channel = "0.1.0-alpha"

# Centralized external versions. Members opt in with
# `dep = { workspace = true, features = [...] }`.
[workspace.dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = "4"
croner = "3"
futures-util = "0.3"
hmac = "0.12"
jsonschema = "0.18"
object_store = { version = "0.13.2", default-features = false }
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.13", default-features = false }
rmp-serde = "1"
rmcp = { version = "1.6", default-features = false }
restate-sdk = { version = "0.10", default-features = false, features = ["http_server"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tracing = "0.1"
unicode-normalization = "0.1"
uuid = "1"


# Internal crates — lockstep with [workspace.package].version. These carry the
# 0.0.0-dev placeholder in-tree; `scripts/release_version.py stamp <version>`
# rewrites every `=` pin (and the lockfile) in the release workflow's ephemeral
# tag checkout, so published crates depend on the real release version.
lash = { package = "lash-runtime", path = "crates/lash", version = "=0.0.0-dev" }
lash-core = { path = "crates/lash-core", version = "=0.0.0-dev" }
lash-http-transport = { path = "crates/lash-http-transport", version = "=0.0.0-dev" }
lash-llm-tools = { path = "crates/lash-llm-tools", version = "=0.0.0-dev" }
lash-llm-transport = { path = "crates/lash-llm-transport", version = "=0.0.0-dev" }
lash-lashlang-runtime = { path = "crates/lash-lashlang-runtime", version = "=0.0.0-dev" }
lash-postgres-store = { path = "crates/lash-postgres-store", version = "=0.0.0-dev" }
lash-s3-store = { path = "crates/lash-s3-store", version = "=0.0.0-dev" }
lash-plugin-mcp = { path = "crates/lash-plugin-mcp", version = "=0.0.0-dev" }
lash-plugin-observational-memory = { path = "crates/lash-plugin-observational-memory", version = "=0.0.0-dev" }
lash-plugin-plan-mode = { path = "crates/lash-plugin-plan-mode", version = "=0.0.0-dev" }
lash-plugin-process-controls = { path = "crates/lash-plugin-process-controls", version = "=0.0.0-dev" }
lash-plugin-tool-output-budget = { path = "crates/lash-plugin-tool-output-budget", version = "=0.0.0-dev" }
lash-protocol-rlm = { path = "crates/lash-protocol-rlm", version = "=0.0.0-dev" }
lash-protocol-standard = { path = "crates/lash-protocol-standard", version = "=0.0.0-dev" }
lash-provider-anthropic = { path = "crates/lash-provider-anthropic", version = "=0.0.0-dev" }
lash-provider-auth = { path = "crates/lash-provider-auth", version = "=0.0.0-dev" }
lash-provider-google = { path = "crates/lash-provider-google", version = "=0.0.0-dev" }
lash-provider-openai = { path = "crates/lash-provider-openai", version = "=0.0.0-dev" }
lash-remote-protocol = { path = "crates/lash-remote-protocol", version = "=0.0.0-dev" }
lash-restate = { path = "crates/lash-restate", version = "=0.0.0-dev" }
lash-rlm-types = { path = "crates/lash-rlm-types", version = "=0.0.0-dev" }
lash-sansio = { path = "crates/lash-sansio", version = "=0.0.0-dev" }
lash-standard-plugins = { path = "crates/lash-standard-plugins", version = "=0.0.0-dev" }
lash-subagents = { path = "crates/lash-subagents", version = "=0.0.0-dev" }
lash-tool-support = { path = "crates/lash-tool-support", version = "=0.0.0-dev" }
lash-tools = { path = "crates/lash-tools", version = "=0.0.0-dev" }
lash-trace = { path = "crates/lash-trace", version = "=0.0.0-dev" }
lash-sqlite-store = { path = "crates/lash-sqlite-store", version = "=0.0.0-dev" }
lashlang = { path = "crates/lashlang", version = "=0.0.0-dev" }
[profile.release]
lto = "thin"
strip = true
