[package]
name = "kaml-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kaml"
path = "src/main.rs"

[dependencies]
kaml = { path = "../kaml" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = "0.4"
serde_json = "1"
