[package]
name = "kaml-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kaml-demo"
path = "src/main.rs"

[[bin]]
name = "test-session"
path = "src/test_session.rs"

[dependencies]
kaml = { path = "../kaml" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = "0.4"
