[package]
name = "lash-autoresearch"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full"] }
lash-tui-extensions = { path = "../lash-tui-extensions" }
lash-embed = { path = "../lash-embed" }
lash-tui = { path = "../lash-tui" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
