[package]
name = "lash-cli"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full"] }
lash-ui = { path = "../lash-ui" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
semver = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
pulldown-cmark = "0.13"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"
