[package]
name = "lash-cli"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
dhat-heap = ["dep:dhat"]
fff-zlob = ["lash/fff-zlob"]

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full", "testing"] }
lash-default-tools = { path = "../lash-default-tools" }
lash-mode-rlm = { path = "../lash-mode-rlm", features = ["sqlite-store"] }
lash-mode-standard = { path = "../lash-mode-standard" }
lash-plugin-plan-mode = { path = "../lash-plugin-plan-mode" }
lash-plugin-prompt-context = { path = "../lash-plugin-prompt-context" }
lash-plugin-ui-activity = { path = "../lash-plugin-ui-activity" }
lash-provider-anthropic = { path = "../lash-provider-anthropic" }
lash-provider-codex = { path = "../lash-provider-codex" }
lash-provider-google = { path = "../lash-provider-google" }
lash-provider-openai = { path = "../lash-provider-openai" }
lash-providers-builtin = { path = "../lash-providers-builtin" }
lash-subagents = { path = "../lash-subagents" }
lash-ui = { path = "../lash-ui" }
lash-tui = { path = "../lash-tui" }
lash-autoresearch = { path = "../lash-autoresearch" }
lash-export = { path = "../lash-export" }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
semver = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
pulldown-cmark = "0.13"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
stats_alloc = "0.1"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"
