[package]
name = "lash-cli"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
dhat-heap = ["dep:dhat"]
fff-zlob = ["lash-standard-plugins/fff-zlob"]
semantic-tool-search = ["lash-standard-plugins/semantic-tool-search"]
# Hidden `--runtime-perf-benchmark` self-benchmark mode. Requires `lash/testing`
# fixtures and is intended for CI / dev profiling, not user-facing builds.
runtime-perf = ["lash/testing"]

[lib]
name = "lash_cli"
path = "src/lib.rs"

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full", "testing"] }
lash-embed = { path = "../lash-embed" }
lash-plugin-mcp = { path = "../lash-plugin-mcp" }
lash-sqlite-store = { path = "../lash-sqlite-store" }
lash-llm-tools = { path = "../lash-llm-tools" }
lash-standard-plugins = { path = "../lash-standard-plugins" }
lash-mode-rlm = { path = "../lash-mode-rlm" }
lash-mode-standard = { path = "../lash-mode-standard" }
lash-rlm-types = { path = "../lash-rlm-types" }
lash-plugin-plan-mode = { path = "../lash-plugin-plan-mode" }
lash-plugin-prompt-context = { path = "../lash-plugin-prompt-context" }
lash-plugin-ui-activity = { path = "../lash-plugin-ui-activity" }
lash-provider-anthropic = { path = "../lash-provider-anthropic" }
lash-provider-auth = { path = "../lash-provider-auth" }
lash-provider-codex = { path = "../lash-provider-codex" }
lash-provider-google = { path = "../lash-provider-google" }
lash-provider-openai = { path = "../lash-provider-openai" }
lash-providers-builtin = { path = "../lash-providers-builtin" }
lash-subagents = { path = "../lash-subagents" }
lash-tui-extensions = { path = "../lash-tui-extensions" }
lash-tui = { path = "../lash-tui" }
lash-autoresearch = { path = "../lash-autoresearch" }
lash-export = { path = "../lash-export" }
lash-file-index = { path = "../lash-file-index" }
crossterm = "0.28"
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
semver = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
pulldown-cmark = { workspace = true }
unicode-width = "0.2"
uuid = { workspace = true, features = ["v4"] }
rand = "0.9"
dirs = "6"
sha2 = { workspace = true }
base64 = { workspace = true }
stats_alloc = "0.1"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"
