[package]
name = "lash-default-tools"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
fff-zlob = ["lash/fff-zlob"]

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full"] }
lash-plugin-observational-memory = { path = "../lash-plugin-observational-memory" }
lash-plugin-rolling-history = { path = "../lash-plugin-rolling-history" }
lash-plugin-tool-discovery = { path = "../lash-plugin-tool-discovery" }
