[package]
name = "lash-delegate-tools"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash", default-features = false, features = ["full"] }
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio-util = "0.7"
