[package]
name = "lash-embed"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
async-trait = { workspace = true }
lash = { path = "../lash" }
lash-mode-rlm = { path = "../lash-mode-rlm" }
lash-mode-standard = { path = "../lash-mode-standard" }
lash-rlm-types = { path = "../lash-rlm-types" }
lash-trace = { path = "../lash-trace" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
trybuild = "1"
