[package]
name = "lash-export"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash", features = ["sqlite-store"] }
lash-rlm-types = { path = "../lash-rlm-types" }
anyhow = "1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lash-export"
path = "src/bin/lash_export.rs"
