[package]
name = "lash-gepa"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash-sansio = { path = "../lash-sansio" }
lash-trace = { path = "../lash-trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
