[package]
name = "lash-harness-opt"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "lash-harness-opt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
lash = { path = "../lash", default-features = false, features = ["full"] }
lash-embed = { path = "../lash-embed" }
lash-providers-builtin = { path = "../lash-providers-builtin" }
lash-rlm-types = { path = "../lash-rlm-types" }
lash-sansio = { path = "../lash-sansio" }
lash-trace = { path = "../lash-trace" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
